[package]
authors = ["Jack Grigg <str4d@i2pmail.org>", "Jeff Burdges <burdges@gnunet.org>", "Syed Hosseini <syed@riseup.net>"]
description = "Aggregate BLS-like signatures"
documentation = "https://docs.rs/bls-like"
homepage = "https://github.com/w3f/bls"
license = "MIT/Apache-2.0"
name = "bls-like"
repository = "https://github.com/w3f/bls"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayref = "0.3"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
sha3 = "0.8"
sha2 = "0.9.2"
digest = "0.9.0"

ark-ff = { version = "0.3", default-features = false }
ark-ec = { version = "0.3", default-features = false }
ark-serialize = { version = "0.3", default-features = false, features = [ "derive" ] }
ark-serialize-derive = { version = "0.3", default-features = false }
ark-bls12-381 = { version = "0.3", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.3", default-features = false, features = [ "curve" ] }

zeroize = { version = "1.0", default-features = false, features = [ "zeroize_derive" ] }
serde = { version = "1.0", default-features = false, optional = true }
thiserror = "1.0"