[package]
authors = ["Jack Grigg <str4d@i2pmail.org>", "Jeff Burdges <burdges@gnunet.org>", "Syed Hosseini <syed@riseup.net>"]
description = "Aggregate BLS-like signatures"
documentation = "https://docs.rs/w3f-bls"
homepage = "https://github.com/w3f/bls"
license = "MIT/Apache-2.0"
name = "w3f-bls"
repository = "https://github.com/w3f/bls"
version = "0.1.4"
edition = "2018"

[dependencies]
arrayref = { version = "0.3", default-features = false }
rand = { version = "0.8.5", default-features = false}
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }

ark-ff = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false, features = [ "derive" ] }
ark-serialize-derive = { version = "0.4.0", default-features = false }

ark-bls12-381 = { version = "0.4.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = [ "curve" ] }

zeroize = { version = "1.0", default-features = false, features = [ "zeroize_derive" ] }
serde = { version = "1.0", default-features = false, optional = true }
thiserror = { version = "1.0", default-features = false }
constcat = "0.3.0"

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std"]
std = ["rand/std"]
experimental = []

[patch.crates-io]
# ark-ec = { git = "https://github.com/w3f/arkworks-algebra", branch = 'master'}
# ark-ff = { git = "https://github.com/w3f/arkworks-algebra", branch = 'master'}
# ark-serialize = { git = "https://github.com/w3f/arkworks-algebra", branch = 'master'}
# ark-serialize-derive = { git = "https://github.com/w3f/arkworks-algebra", branch = 'master'}
# ark-bls12-381 = { git = "https://github.com/w3f/arkworks-curves", branch = 'skalman-bls12-377-wb-hash2curve'}
# ark-bls12-377 = { git = "https://github.com/w3f/arkworks-curves", branch = 'skalman-bls12-377-wb-hash2curve'}
# ark-std = { git = "https://github.com/arkworks-rs/std"}
